Fix 'noWrapInfo' CSS class
Fixes #6592

- fixes the issue where `noWrapInfo` is referenced in `core`
without actually having its CSS defined. The `noWrapInfo` is currently
available from other extensions, and if those extensions are not included
the styling is off.
- removes duplication of CSS properties.

--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -263,10 +263,7 @@
     background: var(--theia-word-highlight-replace-color0);
 }
 
-.noWrapInfo {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.t-siw-search-container .noWrapInfo {
     width: 100%;
 }
 
